[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Backgrounds/background_customer_single.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/BLKCHCRY.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Backgrounds/background_item_single.png" type="Texture" id=3]
[ext_resource path="res://Customers/Customer.gd" type="Script" id=4]
[ext_resource path="res://Assets/Resources/resource_coal.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96, 56 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="StyleBoxFlat" id=8]

[sub_resource type="StyleBoxFlat" id=9]

[sub_resource type="StyleBoxFlat" id=10]

[node name="Customer" type="Node2D"]
script = ExtResource( 4 )

[node name="background_customer_single" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 200.0
margin_bottom = 48.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "One water please"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemPlacement" type="Node2D" parent="."]
position = Vector2( 128, 64 )

[node name="background_Item_single2" type="Sprite" parent="ItemPlacement"]
position = Vector2( -64, -16 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
centered = false

[node name="Sprite" type="Sprite" parent="ItemPlacement"]
position = Vector2( -64, -16 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
centered = false

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 80, 48 )
shape = SubResource( 2 )

[node name="AltText" type="Node2D" parent="."]
z_index = 10

[node name="AltTextLabel" type="Label" parent="AltText"]
margin_left = 96.0
margin_top = 88.0
margin_right = 300.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Some Alt Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AltTextArea" type="Area2D" parent="AltText"]
position = Vector2( 96, 80 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AltText/AltTextArea"]
shape = SubResource( 4 )

[node name="ProgressBar0" type="ProgressBar" parent="."]
visible = false
margin_left = 8.0
margin_top = 112.0
margin_right = 184.0
margin_bottom = 126.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 5 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar1" type="ProgressBar" parent="."]
visible = false
margin_left = 8.0
margin_top = 112.0
margin_right = 184.0
margin_bottom = 126.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 5 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar2" type="ProgressBar" parent="."]
visible = false
margin_left = 8.0
margin_top = 112.0
margin_right = 184.0
margin_bottom = 126.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 5 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar3" type="ProgressBar" parent="."]
visible = false
margin_left = 8.0
margin_top = 112.0
margin_right = 184.0
margin_bottom = 126.0
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 5 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar4" type="ProgressBar" parent="."]
visible = false
margin_left = 8.0
margin_top = 112.0
margin_right = 184.0
margin_bottom = 126.0
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 5 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="area_entered" from="AltText/AltTextArea" to="." method="_on_AltTextArea_area_entered"]
[connection signal="area_exited" from="AltText/AltTextArea" to="." method="_on_AltTextArea_area_exited"]
